Fixed spacing

--- a/edificios/edificio-a/styles.css
+++ b/edificios/edificio-a/styles.css
@@ -290,7 +290,7 @@ html {
 }
 
 .info-classroom-last {
-    margin-bottom: 4.6vh;
+    margin-bottom: 3.6vh;
 }
 
 
